[gd_scene load_steps=33 format=3]

[ext_resource type="Script" path="res://level.gd" id="1_4fthx"]
[ext_resource type="PackedScene" path="res://entities/saw.tscn" id="2_ff505"]
[ext_resource type="PackedScene" path="res://components/signalizer.tscn" id="3_7utew"]
[ext_resource type="Script" path="res://components/signalizer.gd" id="4_q3cu2"]
[ext_resource type="PackedScene" path="res://components/damage_area.tscn" id="5_jpnjb"]
[ext_resource type="Script" path="res://components/damage_area.gd" id="6_b5wkr"]
[ext_resource type="PackedScene" path="res://entities/player.tscn" id="7_gl10s"]
[ext_resource type="Script" path="res://entities/movement.gd" id="8_yhv46"]
[ext_resource type="PackedScene" path="res://components/receiver.tscn" id="9_x3dia"]
[ext_resource type="Script" path="res://components/receiver.gd" id="10_oh2g8"]
[ext_resource type="Script" path="res://components/life.gd" id="11_3osue"]
[ext_resource type="Script" path="res://components/inventory.gd" id="12_mk30p"]
[ext_resource type="Script" path="res://item/item.gd" id="13_guoat"]
[ext_resource type="Script" path="res://entities/teste.gd" id="14_3m8kk"]
[ext_resource type="PackedScene" path="res://entities/laser.tscn" id="15_0m6ms"]
[ext_resource type="Script" path="res://entities/laser.gd" id="16_nu3td"]
[ext_resource type="PackedScene" path="res://entities/beartrap.tscn" id="17_2krrl"]
[ext_resource type="Script" path="res://entities/beartrap.gd" id="18_y5ym7"]
[ext_resource type="PackedScene" path="res://entities/prensa.tscn" id="19_mgfjd"]
[ext_resource type="Script" path="res://entities/prensa.gd" id="20_vo20h"]
[ext_resource type="Script" path="res://camera_path.gd" id="21_4vq13"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1bvp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(71, 136.25)

[sub_resource type="Animation" id="Animation_rfe5m"]
resource_local_to_scene = true
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qly61"]
_data = {
&"RESET": SubResource("Animation_rfe5m")
}

[sub_resource type="Animation" id="Animation_e4p34"]
resource_name = "crouch"
length = 0.2
step = 0.0333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.0333333, -0.0782248, 1.32498, -0.0487163, 0.265785, 0, 0.0128002),
"times": PackedFloat32Array(0, 0.199978)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, 0, 0, 0.0480882, -0.0896015, 0.624982, -0.1, -0.294405, 0, -0.00640011),
"times": PackedFloat32Array(0, 0.199978)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfe5m"]
_data = {
&"crouch": SubResource("Animation_e4p34")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0sbgf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vw27"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mp7k"]
resource_local_to_scene = true

[sub_resource type="Curve2D" id="Curve2D_272bh"]
bake_interval = 0.01
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 956, 774, 0, 0, 0, 0, 2679, 773, 0, 0, 0, 0, 3244, 526, 0, 0, 0, 0, 3932, 84)
}
point_count = 4

[node name="Game" type="Node" groups=["game"]]
script = ExtResource("1_4fthx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, 1080)
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 0, 2949, 0, 2949, -295, 3514, -295, 3514, -709, 4185, -709, 4190, 1437, 5, 1438, -86, 1438, -86, -1080, 0, -1080)

[node name="Saw" type="Area2D" parent="." instance=ExtResource("2_ff505")]
position = Vector2(1343, 1071)
scale = Vector2(11.156, 11.156)
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="Saw"]
shape = SubResource("CircleShape2D_1bvp3")

[node name="Signalizer" type="Node" parent="Saw" instance=ExtResource("3_7utew")]
script = ExtResource("4_q3cu2")

[node name="DamageArea" type="Node" parent="Saw" instance=ExtResource("5_jpnjb")]
script = ExtResource("6_b5wkr")

[node name="Player" type="CharacterBody2D" parent="." instance=ExtResource("7_gl10s")]
position = Vector2(939, 846)
collision_mask = 2
floor_snap_length = 0.0
script = ExtResource("8_yhv46")
jump_coyote_time = 0.1
knockback_duration = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_0xm2m")

[node name="Receiver" type="Node" parent="Player" instance=ExtResource("9_x3dia")]
script = ExtResource("10_oh2g8")

[node name="Signalizer" type="Node" parent="Player" instance=ExtResource("3_7utew")]
script = ExtResource("4_q3cu2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player" groups=["animations"]]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qly61"),
&"player": SubResource("AnimationLibrary_rfe5m")
}

[node name="Life" type="Node" parent="Player"]
unique_name_in_owner = true
script = ExtResource("11_3osue")

[node name="@Timer@2" type="Timer" parent="Player/Life"]

[node name="Inventory" type="Node" parent="Player"]
script = ExtResource("12_mk30p")

[node name="1" type="Node" parent="Player/Inventory"]
script = ExtResource("13_guoat")

[node name="2" type="Node" parent="Player/Inventory"]
script = ExtResource("13_guoat")

[node name="3" type="Node" parent="Player/Inventory"]
script = ExtResource("13_guoat")

[node name="4" type="Node" parent="Player/Inventory"]
script = ExtResource("13_guoat")

[node name="teste" type="Node" parent="Player"]
script = ExtResource("14_3m8kk")

[node name="Laser" type="Area2D" parent="." instance=ExtResource("15_0m6ms")]
position = Vector2(110, 900)
rotation = -0.449738
scale = Vector2(1, 26.16)
script = ExtResource("16_nu3td")

[node name="Collision" type="CollisionShape2D" parent="Laser"]
shape = SubResource("RectangleShape2D_0sbgf")
disabled = true

[node name="Signalizer" type="Node" parent="Laser" instance=ExtResource("3_7utew")]
script = ExtResource("4_q3cu2")

[node name="DamageArea" type="Node" parent="Laser" instance=ExtResource("5_jpnjb")]
script = ExtResource("6_b5wkr")

[node name="Duration" type="Timer" parent="Laser"]
wait_time = 2.0
one_shot = true

[node name="Cooldown" type="Timer" parent="Laser"]
wait_time = 2.0
one_shot = true

[node name="Beartrap" type="Area2D" parent="." instance=ExtResource("17_2krrl")]
position = Vector2(491, 1062)
scale = Vector2(9.83341, 4.09531)
script = ExtResource("18_y5ym7")

[node name="Collision" type="CollisionShape2D" parent="Beartrap"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_5vw27")

[node name="ActivatedArea" type="Area2D" parent="Beartrap"]

[node name="Collision" type="CollisionShape2D" parent="Beartrap/ActivatedArea"]
shape = SubResource("RectangleShape2D_kek77")
disabled = true

[node name="Signalizer" type="Node" parent="Beartrap/ActivatedArea" instance=ExtResource("3_7utew")]
script = ExtResource("4_q3cu2")

[node name="DamageArea" type="Node" parent="Beartrap/ActivatedArea" instance=ExtResource("5_jpnjb")]
script = ExtResource("6_b5wkr")

[node name="Duration" type="Timer" parent="Beartrap"]
wait_time = 2.0
one_shot = true

[node name="Cooldown" type="Timer" parent="Beartrap"]
wait_time = 2.0
one_shot = true

[node name="Warmup" type="Timer" parent="Beartrap"]
one_shot = true

[node name="Prensa" parent="." instance=ExtResource("19_mgfjd")]
position = Vector2(1061, 639)
script = ExtResource("20_vo20h")

[node name="Collision" type="CollisionShape2D" parent="Prensa"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_5mp7k")

[node name="End" type="Node2D" parent="Prensa"]
position = Vector2(0, 441)

[node name="DamageArea" type="Node" parent="Prensa" instance=ExtResource("5_jpnjb")]
script = ExtResource("6_b5wkr")

[node name="Signalizer" type="Node" parent="Prensa" instance=ExtResource("3_7utew")]
script = ExtResource("4_q3cu2")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_272bh")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(956, 774)
rotation = -0.000580383
script = ExtResource("21_4vq13")

[node name="Camera2D" type="Camera2D" parent="Path2D/PathFollow2D"]
rotation = -0.00624156

[connection signal="body_entered" from="Saw" to="Saw/DamageArea" method="_on_parent_body_entered"]
[connection signal="damage_received" from="Player/Signalizer" to="Player" method="_on_signalizer_damage_received"]
[connection signal="body_entered" from="Laser" to="Laser/DamageArea" method="_on_parent_body_entered"]
[connection signal="timeout" from="Laser/Duration" to="Laser" method="_on_duration_timeout"]
[connection signal="timeout" from="Laser/Cooldown" to="Laser" method="_on_cooldown_timeout"]
[connection signal="body_entered" from="Beartrap" to="Beartrap" method="_on_body_entered"]
[connection signal="body_entered" from="Beartrap/ActivatedArea" to="Beartrap/ActivatedArea/DamageArea" method="_on_parent_body_entered"]
[connection signal="timeout" from="Beartrap/Duration" to="Beartrap" method="_on_duration_timeout"]
[connection signal="timeout" from="Beartrap/Cooldown" to="Beartrap" method="_on_cooldown_timeout"]
[connection signal="timeout" from="Beartrap/Warmup" to="Beartrap" method="_on_warmup_timeout"]
[connection signal="body_entered" from="Prensa" to="Prensa/DamageArea" method="_on_parent_body_entered"]

[editable path="Prensa"]
